examples/test/testpolicy16775.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16775
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key14: value43
      key42: value13
      key7: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value49
          key16: value36
          key8: value32
